# ancfl_gameserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate.sh
ancfl/: address.cc  address.h  ancfl.h  application.cc  application.h  bytearray.cc  bytearray.h  config.cc  config.h  daemon.cc  daemon.h  endian.h  env.cc  env.h  fd_manager.cc  fd_manager.h  fiber.cc  fiber.h  hook.cc  hook.h  iomanager.cc  iomanager.h  library.cc  library.h  log.cc  log.h  macro.h  main.cc  module.cc  module.h  mutex.cc  mutex.h  noncopyable.h  protocol.cc  protocol.h  scheduler.cc  scheduler.h  singleton.h  socket.cc  socket.h  (+17 more)
ancfl/db/: db.h  fox_thread.cc  fox_thread.h  mysql.cc  mysql.h  redis.cc  redis.h  sqlite3.cc  sqlite3.h
ancfl/ds/: array.h  bitmap.cc  bitmap.h  cache_status.h  dict.h  hash_map.h  hash_multimap.h  lru_cache.h  roaring.c  roaring.h  roaring.hh  roaring_bitmap.cc  roaring_bitmap.h  timed_cache.h  timed_lru_cache.h  util.cc  util.h
ancfl/email/: email.cc  email.h  smtp.cc  smtp.h
ancfl/http/: http.cc  http.h  http11_common.h  http11_parser.h  http11_parser.rl  http11_parser.rl.cc  http_connection.cc  http_connection.h  http_parser.cc  http_parser.h  http_server.cc  http_server.h  http_session.cc  http_session.h  httpclient_parser.h  httpclient_parser.rl  httpclient_parser.rl.cc  servlet.cc  servlet.h  session_data.cc  session_data.h  ws_connection.cc  ws_connection.h  ws_server.cc  ws_server.h  ws_servlet.cc  ws_servlet.h  ws_session.cc  ws_session.h
ancfl/http/servlets/: config_servlet.cc  config_servlet.h  status_servlet.cc  status_servlet.h
ancfl/ns/: name_server_module.cc  name_server_module.h  ns_client.cc  ns_client.h  ns_protobuf.pb.cc  ns_protobuf.pb.h  ns_protobuf.proto  ns_protocol.cc  ns_protocol.h
ancfl/orm/: column.cc  column.h  index.cc  index.h  orm.cc  table.cc  table.h  util.cc  util.h
ancfl/rock/: rock_protocol.cc  rock_protocol.h  rock_server.cc  rock_server.h  rock_stream.cc  rock_stream.h
ancfl/streams/: async_socket_stream.cc  async_socket_stream.h  load_balance.cc  load_balance.h  service_discovery.cc  service_discovery.h  socket_stream.cc  socket_stream.h  zlib_stream.cc  zlib_stream.h
ancfl/util/: crypto_util.cc  crypto_util.h  hash_util.cc  hash_util.h  json_util.cc  json_util.h  time.cc  time.h
cmake/: FindMySQL.cmake  utils.cmake
examples/: echo_server.cc  echo_server_udp.cc  echo_udp_client.cc
game_server/: CMakeLists.txt  README.md
game_server/account_server/: account_service.cc  account_service.h  main.cc
game_server/center_server/: center_server.cc  center_server.h  main.cc
game_server/common/: config_manager.cc  config_manager.h  game_service_base.cc  game_service_base.h  message_dispatcher.cc  message_dispatcher.h  shared_memory.cc  shared_memory.h  tcp_service.cc  tcp_service.h
game_server/conf/: account_server.yml  db_server.yml  logic_server.yml  login_server.yml  proxy_server.yml  server.yml
game_server/db_scripts/: create_db.sql
game_server/db_server/: db_service.cc  db_service.h  main.cc
game_server/log_server/: log_server.cc  log_server.h  main.cc
game_server/logic_server/: activity_module.cc  activity_module.h  bag_module.cc  bag_module.h  buff_module.cc  buff_module.h  equip_module.cc  equip_module.h  friend_module.cc  friend_module.h  guild_module.cc  guild_module.h  logic_service.cc  logic_service.h  mail_module.cc  mail_module.h  main.cc  role_data.h  role_module.cc  role_module.h  scene_module.cc  scene_module.h  shop_module.cc  shop_module.h  skill_module.cc  skill_module.h  task_module.cc  task_module.h
game_server/login_server/: login_service.cc  login_service.h  main.cc
game_server/monitor_server/: main.cc  monitor_server.cc  monitor_server.h
game_server/proto/: msg_account.proto  msg_activity.proto  msg_bag.proto  msg_base.proto  msg_battle.proto  msg_cross.proto  msg_equip.proto  msg_friend.proto  msg_guild.proto  msg_id.proto  msg_log.proto  msg_mail.proto  msg_monitor.proto  msg_role.proto  msg_shop.proto  msg_task.proto
game_server/proxy_server/: main.cc  proxy_service.cc  proxy_service.h
game_server/tests/: CMakeLists.txt  test_activity_module.cc  test_bag_module.cc  test_buff_module.cc  test_center_server.cc  test_config_manager.cc  test_equip_module.cc  test_friend_module.cc  test_guild_module.cc  test_log_server.cc  test_mail_module.cc  test_message_dispatcher.cc  test_monitor_server.cc  test_role_module.cc  test_scene_module.cc  test_shared_memory.cc  test_shop_module.cc  test_skill_module.cc  test_task_module.cc  test_tcp_service.cc
game_server/tools/: excel_to_sqlite.py
samples/: my_http_server.cc
template/: CMakeLists.txt  move.sh
template/template/: my_module.cc  my_module.h
tests/: test.cc  test_address.cc  test_application.cc  test_array.cc  test_bitmap.cc  test_bytearray.cc  test_config.cc  test_crypto.cc  test_daemon.cc  test_dict.cc  test_email.cc  test_env.cc  test_fiber.cc  test_hashmap.cc  test_hashmultimap.cc  test_hook.cc  test_http.cc  test_http_connection.cc  test_http_parser.cc  test_http_server.cc  test_iomanager.cc  test_lru.cc  test_module.cc  test_mysql.cc  test_nameserver.cc  test_orm.cc  test_rock.cc  test_scheduler.cc  test_service_discovery.cc  test_socket.cc  test_sqlite3.cc  test_tcp_server.cc  test_thread.cc  test_timed_cache.cc  test_timed_lru_cache.cc  test_uri.cc  test_util.cc  test_ws_client.cc  test_ws_server.cc  test_zlib_stream.cc  (+1 more)
